<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="@dimen/screen_margin"
        android:paddingTop="@dimen/space_xl"
        android:paddingEnd="@dimen/screen_margin"
        android:paddingBottom="@dimen/space_lg">

        <ImageView
            android:layout_width="@dimen/auth_logo_size"
            android:layout_height="@dimen/auth_logo_size"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_icon_circle"
            android:importantForAccessibility="no"
            android:padding="@dimen/space_md"
            android:src="@drawable/ic_shield"
            app:tint="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:accessibilityHeading="true"
            android:gravity="center"
            android:text="@string/auth_title"
            android:textAppearance="@style/TextAppearance.Marvel.DisplayLarge"
            android:textColor="@color/red" />

        <TextView
            style="@style/Widget.Marvel.ScreenSubtitle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/login_subtitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            style="@style/Widget.Marvel.TextField"
            android:layout_marginTop="@dimen/space_xl"
            android:hint="@string/auth_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                style="@style/Widget.Marvel.TextField.Input"
                android:autofillHints="emailAddress"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            style="@style/Widget.Marvel.TextField"
            android:hint="@string/auth_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                style="@style/Widget.Marvel.TextField.Input"
                android:autofillHints="password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_forgot"
            style="@style/Widget.Marvel.LinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/login_forgot" />

        <TextView
            android:id="@+id/login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_sm"
            android:accessibilityLiveRegion="polite"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Marvel.Body"
            android:textColor="?attr/colorError"
            android:visibility="gone"
            tools:text="E-mail ou senha incorretos"
            tools:visibility="visible" />

        <include
            android:id="@+id/login_submit"
            layout="@layout/view_loading_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_go_sign_up"
            style="@style/Widget.Marvel.LinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/login_go_sign_up" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
